# telegram_stats

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.web.yml  docker-compose.yml
src/: config.rs  main.rs
src/application/services/: data_processor.rs
src/core/: mod.rs
src/core/entities/: chats.rs  messages.rs  prelude.rs
src/core/types/: chat.rs  mod.rs  model_from_message.rs  stats.rs
src/data/: mod.rs
src/data/implementation/: json.rs  mod.rs  postgres.rs  statistic_generators.rs
src/data/models/: data_getter.rs  data_preparer.rs  mod.rs
src/data/repositories/: data_repository.rs  statistic_repository.rs  storage_repository.rs
src/domain/entities/: chats.rs  messages.rs  mod.rs  prelude.rs
src/domain/types/: chat.rs  stats.rs
src/infrastructure/: mod.rs
src/infrastructure/persistence/: json.rs  postgres.rs  statistic_generators.rs
src/infrastructure/repositories/: data_repository.rs  mod.rs  statistic_repository.rs  storage_repository.rs
src/ingest/: data_getter.rs  data_preparer.rs
src/services/: data_processor.rs  gen_stats.rs  mod.rs
src/utils/: deserialize_datetime.rs  mod.rs  model_from_message.rs  save_to_json.rs
src/utils/errors/: data_error.rs  mod.rs
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  snowflakes.css
web/src/components/: countdown.tsx  message-bubble.tsx  sticker-preview.tsx  story-panel.tsx
