[package]
name = "telegram_stats"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.8"
serde = { version = "1.0.216", features = ["derive", "std"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15.0"
