[package]
name = "telegram_stats"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.8"
anyhow = "1.0.95"
serde = { version = "1.0.216", features = ["derive", "std"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4.39", features = ["serde"] }
sea-orm = { version = "1.1.3", features = ["chrono", "sqlx-postgres", "runtime-async-std-native-tls", "macros"] }
envy = "0.4.2"
futures = "0.3.31"
